[gd_scene load_steps=2 format=3 uid="uid://b6j8k3m2p9q7r"]

[ext_resource type="Script" path="res://scripts/screens/EventDialogueScreen.gd" id="1_eventdialogue"]

[node name="EventDialogueScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eventdialogue")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DialoguePanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -400.0
offset_right = 450.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="DialoguePanel"]
layout_mode = 2

[node name="PortraitContainer" type="PanelContainer" parent="DialoguePanel/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="DialoguePanel/VBox/PortraitContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="CharacterName" type="Label" parent="DialoguePanel/VBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "캐릭터 이름"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="DialoguePanel/VBox"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "대화 내용이 여기에 표시됩니다."
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="DialoguePanel/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ContinueButton" type="Button" parent="DialoguePanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "▼ 계속"
